Enigma/testing/error/settingwrongnumber.inp
* B BETA I II III SDF (BC) (DE)
IJSODFJOD